--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <title>Augustin Traquenard</title>
+  <title>Augustin artiste plasticien</title>
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
 
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css?family=IM+Fell+English+SC" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Raleway+Dots" rel="stylesheet">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Blotter/0.1.0/blotter.min.js"></script>
-  <script type="text/javascript" src="js/BLOTTER.js"></script>
+  <script type="text/javascript" src="js/blotter.js"></script>
 </head>
 <body onmousemove="makeid()">
 
