issue with masonry

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <div class="center container">
 <div class="grid">
   <div class="article--item"><img width="100%" class="materialboxed" src="css/work/1LOW.jpg"></div>
-  <div class="article--item2"><img width="100%" class="materialboxed" src="css/work/2LOW.jpg"></div>
+  <div class="article--item"><img width="100%" class="materialboxed" src="css/work/2LOW.jpg"></div>
   <div class="article--item"><img width="100%" class="materialboxed" src="css/work/3LOW.jpg"></div>
   <div class="article--item"><img width="100%" class="materialboxed" src="css/work/Atelier1.jpg"></div>
   <div class="article--item"><img width="100%" class="materialboxed" src="css/work/BRADERIEART.jpg"></div>
